<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="username_label">&#160;账&#160;&#160;号&#160;</string>
    <string name="password_label">&#160;密&#160;&#160;码&#160;</string>
    <string name="phone_label">手机号</string>
    <string name="code_label">验证码</string>
    <string name="username_input_hint">请输入登录账号</string>
    <string name="password_input_hint">请输入登录密码</string>
    <string name="phone_input_hint">请输入手机号</string>
    <string name="code_input_hint">请输入验证码</string>
    <string name="login_type_username_rb_text">账号登录</string>
    <string name="login_type_phone_rb_text">验证码登录</string>
    <string name="user_login_btn_text">登录</string>
    <string name="user_code_btn_text">发送验证码</string>

    <string name="app_account_name">Jason</string>
    <string name="app_account_type">com.jason.avengers.sync</string>
</resources>