<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RtlCompat">

    <RadioGroup
        android:id="@+id/login_type_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:checkedButton="@id/login_type_username_rb"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/login_type_username_rb"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/login_type_username_rb_text"
            android:textSize="13sp"/>

        <RadioButton
            android:id="@+id/login_type_phone_rb"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/login_type_phone_rb_text"
            android:textSize="13sp"/>
    </RadioGroup>

    <TextView
        android:id="@+id/user_un_label"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/username_label"
        android:textColor="@color/color_666666"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_type_rg"/>

    <EditText
        android:id="@+id/user_un_input"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="10dp"
        android:background="@null"
        android:hint="@string/username_input_hint"
        android:inputType="textPersonName"
        android:textColor="@color/color_111111"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@+id/user_un_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/user_un_label"/>

    <TextView
        android:id="@+id/user_pwd_label"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/password_label"
        android:textColor="@color/color_666666"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/user_un_label"
        app:layout_constraintTop_toBottomOf="@+id/user_un_label"/>

    <EditText
        android:id="@+id/user_pwd_input"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:hint="@string/password_input_hint"
        android:inputType="textPassword"
        android:textColor="@color/color_111111"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@+id/user_pwd_label"
        app:layout_constraintRight_toRightOf="@+id/user_un_input"
        app:layout_constraintTop_toBottomOf="@+id/user_un_input"/>

    <TextView
        android:id="@+id/user_phone_label"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/phone_label"
        android:textColor="@color/color_666666"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_type_rg"/>

    <EditText
        android:id="@+id/user_phone_input"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="10dp"
        android:background="@null"
        android:hint="@string/phone_input_hint"
        android:inputType="phone"
        android:textColor="@color/color_111111"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintLeft_toRightOf="@+id/user_phone_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/user_phone_label"/>

    <TextView
        android:id="@+id/user_code_label"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/code_label"
        android:textColor="@color/color_666666"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/user_phone_label"
        app:layout_constraintTop_toBottomOf="@+id/user_phone_label"/>

    <EditText
        android:id="@+id/user_code_input"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:hint="@string/code_input_hint"
        android:inputType="numberPassword"
        android:textColor="@color/color_111111"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintLeft_toRightOf="@+id/user_code_label"
        app:layout_constraintRight_toLeftOf="@+id/user_code_btn"
        app:layout_constraintTop_toBottomOf="@+id/user_phone_input"/>

    <Button
        android:id="@+id/user_code_btn"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/user_code_btn_text"
        android:textColor="@color/color_111111"
        android:textSize="8sp"
        android:visibility="gone"
        app:layout_constraintLeft_toRightOf="@+id/user_code_input"
        app:layout_constraintRight_toRightOf="@+id/user_phone_input"
        app:layout_constraintTop_toBottomOf="@+id/user_phone_input"/>

    <Button
        android:id="@+id/user_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="140dp"
        android:text="@string/user_login_btn_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_type_rg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/user_login_btn">

        <ImageView
            android:id="@+id/sns_login_wx"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/user_sns_login_wx_icon"/>

        <ImageView
            android:id="@+id/sns_login_wb"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/user_sns_login_wb_icon"/>

        <ImageView
            android:id="@+id/sns_login_qq"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/user_sns_login_qq_icon"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>